--- a/code/tpl/videoDetails.html
+++ b/code/tpl/videoDetails.html
@@ -27,11 +27,11 @@
       <video id="video_onshow" src="#" poster="../PUBLIC/images/video_img.png"></video>
       <div id="video_wait_show_list">
         <div class="video_wait_pagination">
-          <div class="video_wait_swiitch active">
+          <div class="video_wait_switch active">
              <div  class="video_pointer"></div>
              <p>相关视频</p>
           </div>
-          <div class="video_wait_swiitch">
+          <div class="video_wait_switch">
             <div  class="video_pointer"></div>
             <p>最热视频</p>
           </div>
@@ -41,7 +41,7 @@
             <div class="video_wait_list">
               <video src="#" poster="../PUBLIC/images/video_img.png"></video>
                 <div class="video_wait_info">
-                  <p>[翻院2014迎新]  迎新系列活动照片及视频</p>
+                  <p>[2013咨询] 迎新第三波 ———学生会招新</p>
                   <p>
                     <img src="../PUBLIC/images/video_total_click.png" alt="点击统计"/>
                     <span>203</span>
@@ -53,7 +53,7 @@
           <div class="video_wait_list">
               <video src="#" poster="../PUBLIC/images/video_img.png"></video>
                 <div class="video_wait_info">
-                  <p>[翻院2013迎新]  迎新系列活动照片及视频</p>
+                  <p>[2013咨询] 迎新第三波 ———学生会招新</p>
                   <p>
                     <img src="../PUBLIC/images/video_total_click.png" alt="点击统计"/>
                     <span>203</span>
